syntax = "proto3";
package grpcapi;

// set go package name to pb
option go_package = "pb";

import "google/api/annotations.proto";


message TokenRequest {
	string grant_type = 1; // client_credentials or password or refresh_token
	string client_id = 2;
	string client_secret = 3;
	string scope = 4;
	string username = 5;
	string password = 6;
	string refresh_token = 7;
}
message TokenResponse {
	string token_type = 1;
	int32 expires_in = 2;
	string access_token = 3;
	string refresh_token = 4;
	string id_token = 5;
}

service TokenManager{
	rpc Token (TokenRequest) returns (TokenResponse) {
		//	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
		//		security: {}
		//	};
		option (google.api.http) = { post: "/api/v1/oauth2/token" body: "*" };
	};
}
